# Fileshare

./: .env  .gitignore  Cargo.toml  README.md  ai_repo_agent.py  diesel.toml  fileshare.db
.github/workflows/: ai_agent.yml
RustroverProjects/fileshare/: Cargo.toml
RustroverProjects/fileshare/migrations/2025-06-16-191856_file/: down.sql  up.sql
RustroverProjects/fileshare/migrations/2025-06-17-191054_link_file/: up.sql
RustroverProjects/fileshare/src/: main.rs  schema.rs
RustroverProjects/fileshare/src/controller/: usercontroller.rs
RustroverProjects/fileshare/src/model/: usermodel.rs
RustroverProjects/fileshare/src/repository/: userrepository.rs
RustroverProjects/fileshare/src/service/: userservice.rs
migrations/2025-06-06-163214_create_user/: up.sql
migrations/2025-06-17-191054_link_file/: down.sql
src/: main.rs
src/Security/: JWT.rs  jwt.rs
src/controller/: filecontroller.rs  usercontroller.rs
src/model/: filemodel.rs  securitymodel.rs  usermodel.rs
src/repository/: filerepository.rs  userrepository.rs
src/service/: fileservice.rs  userservice.rs
