[package]
name = "fileshare"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
serde = { version = "1.0.219",features = ["derive"] }
jsonwebtoken = "9.3.1"
uuid = "1.16.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde","std"] }
dotenv = "0.15.0"
serde_json = "1.0.140"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35","chrono"] }
anyhow = "1.0.98"
tower-http = { version = "0.6.6", features = ["full"] }
regex = "1.11.1"
mime_guess = "2.0.5"
axum-streams = "0.21.0"
tokio-stream = "0.1.17"
futures = "0.3.31"
tokio-util = "0.7.15"
url = "2.5.4"
urlencoding = "2.1.3"
